# libgif

./: CMakeLists.txt  README  README.md
src/: gif.h  gif_reader.c  gif_writer.c
